syntax = "proto3";

package plc;


// keep dictionary order
import "req_resp/activate_adapter.proto";
import "req_resp/control_plc.proto";
import "req_resp/leave_adapter.proto";
import "req_resp/query_plc_devices.proto";
import "req_resp/query_plc_schema.proto";
import "req_resp/query_plc_types.proto";
import "req_resp/query_plc.proto";
import "req_resp/upsert_plc.proto";


service PlcService {
    // from plc_adapter
    rpc activate_adapter(ActivateAdapterRequest) returns (ActivateAdapterResponse) {}
    rpc leave_adapter(LeaveAdapterRequest) returns (LeaveAdapterResponse) {}

    // from plc_client
    rpc query_plc_types(QueryPlcTypesRequest) returns (QueryPlcTypesResponse) {}
    rpc query_plc_schema(QueryPlcSchemaRequest) returns (QueryPlcSchemaResponse) {}
    rpc query_plc_devices(QueryPlcDevicesRequest) returns (QueryPlcDevicesResponse) {}
    rpc upsert_plc_device(UpsertPlcDeviceRequest) returns (UpsertPlcDeviceResponse) {}

    // from plc_client
    rpc control_plc(ControlPlcRequest) returns (ControlPlcResponse) {}
    rpc query_plc(QueryPlcRequest) returns (QueryPlcResponse) {}
}

service PlcAdapter {
    // from plc_adapter
    rpc control_plc(ControlPlcRequest) returns (ControlPlcResponse) {}
    rpc query_plc(QueryPlcRequest) returns (QueryPlcResponse) {}
}
